# GS8

./: .clang-format  .cmake-format.json  .editorconfig  .gitattributes  .gitignore  CMakeLists.txt  Doxyfile  GS8-MSBuild.code-workspace  GS8-cmake.code-workspace  GS8-wsl.code-workspace  GS8.code-workspace  GS8.md  Makefile.am  Makefile.mk  README.md  README.txt  autogen.sh  build-clean.sh  build-common.inc  build-config.sh  build-includes.sh  build.sh  config.h.in  configure.ac  findfunc.sh  install_dependencies.sh  make.sh  test-driver.1  uncrustify.cfg
CmdPlugins/CmdCameraSelector/: CCmdCameraSelector.cpp  CCmdCameraSelector.h  CmdCameraSelector.vcproj  CmdCameraSelector.vcxproj  Makefile.am  Stdafx.cpp
CmdPlugins/CmdConstant/: CMakeLists.txt  CmdConstant.cpp  CmdConstant.h  CmdConstant.vcproj  Makefile.am
CmdPlugins/CmdConstantD/: CmdConstantD.cpp  CmdConstantD.h  CmdConstantD.project  CmdConstantD.vcproj  CmdConstantD.vcxproj  Makefile.am
CmdPlugins/CmdCopyToD/: CmdCopyToD.cpp  CmdCopyToD.h  CmdCopyToD.project  CmdCopyToD.vcproj  CmdCopyToD.vcxproj  Makefile.am  ReadMe.txt
CmdPlugins/CmdKeyName/: CmdKeyName.cpp  CmdKeyName.h  CmdKeyName.project  CmdKeyName.vcproj  CmdKeyName.vcxproj  Makefile.am
CmdPlugins/CmdReturnTrue/: CmdReturnTrue.cpp  CmdReturnTrue.h  CmdReturnTrue.project  CmdReturnTrue.vcproj  CmdReturnTrue.vcxproj  Makefile.am
CmdPlugins/CmdTouchCalibrate/: CmdTouchCalibrate.cpp  CmdTouchCalibrate.h  CmdTouchCalibrate.project  CmdTouchCalibrate.vcproj  CmdTouchCalibrate.vcxproj  Makefile.am  Stdafx.h
CmdPlugins/CmdVehicleDataLoader/: CmdVehicleDataLoader.cpp  CmdVehicleDataLoader.h  CmdVehicleDataLoader.project  CmdVehicleDataLoader.vcproj  CmdVehicleDataLoader.vcxproj  IEssStatus.h  Makefile.am
Common/: CCharDescriptor.cpp  CCharDescriptor.h  CCharString.cpp  CCharStringHash.h  CConfiguration.cpp  CConfiguration.h  CEventManager.cpp  CEventManager.h  CFactoryConfiguration.cpp  CFactoryConfiguration.h  CFactoryPlugin.cpp  CFactoryPlugin.h  CMakeLists.txt  CMatrix3x3.cpp  CMatrix3x3.h  CMatrix3x3d.cpp  CMatrix3x3d.h  CPluginConfiguration.cpp  CPluginConfiguration.h  CPluginLibrary.cpp  CPluginLibrary.h  CPluginLoader.cpp  CPluginLoader.h  CUnitsOfMeasure.cpp  CUnitsOfMeasure.h  CVariables.cpp  CVariables.h  CVariantData.cpp  CVariantData.h  Chronos.cpp  Chronos.h  Common.vcxproj  IExternalXML.cpp  IExternalXML.h  IKeyboard.cpp  IKeyboard.h  IPlugin.cpp  IPlugin.h  IPluginLibrary.cpp  IPluginLibrary.h  (+63 more)
Common/.deprecated/: Common.project  Common.vcproj
Common/Common_specs/: CCharDescriptor_spec.cpp  CCharString_spec.cpp  CColor_spec.cpp  CDateTime_spec.cpp  CEventManger_spec.cpp  CSemaphore_spec.cpp  CUnitsOfMeasure_spec.cpp  CVariables_spec.cpp  CVariantData_spec.cpp  Common_specs.project  Common_specs.vcxproj  Makefile.am  Makefile.in  ReadMe.txt  stdafx.h  (+6 more)
Config/: GaugeXML.project  Makefile.am  TouchCal.calibrate  XOConfiguration.xml  XOHTML.xml  XmlObjects.xsd  shared.xsd  types.xsd
Gadget/: .goutputstream-ZIGUTW  CAction.cpp  CAction.h  CApplicationGauge.cpp  CApplicationGauge.h  CApplicationGaugeOpenGL.cpp  CApplicationGaugeOpenGL.h  CApplicationGaugeWin.cpp  CApplicationGaugeWin.h  CArc.cpp  CArc.h  CAxis.cpp  CAxis.h  CChoose.cpp  CChoose.h  CChooseWhen.cpp  CChooseWhen.h  CCircle.cpp  CCircle.h  CCommandProcessor.cpp  CCommandProcessor.h  CDictHandlerTime.cpp  CDictHandlerTime.h  CDictPageActive.cpp  CDictPageActive.h  CDictPageAlerts.cpp  CDictPageAlerts.h  CDictPageCommands.cpp  CDictPageCommands.h  CDictPageConfigWrapper.cpp  CDictPageConfigWrapper.h  CDictPageEvents.cpp  CDictPageEvents.h  CDictPageFunctions.cpp  CDictPageFunctions.h  CDictPageLazyLoad.cpp  CDictPageLazyLoad.h  CDictPageP.cpp  CDictPageP.h  CDictPageSelector.cpp  (+297 more)
GenericContainer/: GenericContainer.cpp  GenericContainer.h  GenericContainer.project  GenericContainer.vcproj  Makefile.am
Platform/: CCharDescriptor.cpp  CCharDescriptor.h  CCharString.cpp  CCharString.h  CCharStringHash.h  CColor.cpp  CColor.h  CDateTime.cpp  CDateTime.h  CFilePath.cpp  CFilePath.h  CMakeLists.txt  CMutex.cpp  CMutex.h  CSemaphore.cpp  CSemaphore.h  CSerial.cpp  CSerial.h  CSignal.cpp  CSignal.h  CSocket.cpp  CSocket.h  CheckLeaks.h  LogFile.cpp  LogFile.h  Makefile.am  NamespaceRoot.h  Platform.project  Platform.vcxproj  TArray.h  TCharDescriptor.h  TEnumerator.h  TPointer.h  UDeclPlatform.h  UDeclSpec.h  UFile.cpp  UFile.h  UFloat.h  UMachine.h  UMath.h  (+24 more)
VSAShared/: AssemblyInfo.cpp  CCommandProcessorForPlugins.cpp  CCommandProcessorForPlugins.h  CDesk.h  CDeskManager.cpp  CDeskManager.h  CFunctionProcessorForPlugins.cpp  CFunctionProcessorForPlugins.h  CHusk.cpp  CHusk.h  CMakeLists.txt  CServiceManager.cpp  CServiceManager.h  CTaskManager.cpp  CTaskManager.h  CVehicleDataLoader.cpp  CVehicleDataLoader.h  CVehicleDataReader.cpp  CVehicleDataReader.h  CXMLSampleLoader.cpp  CXMLSampleLoader.h  IActiveXML.cpp  IActiveXML.h  IApplet.cpp  IApplet.h  IAttribute.cpp  IAttribute.h  IBox.cpp  IBox.h  ICommandPlugin.cpp  ICommandPlugin.h  IDesk.cpp  IDesk.h  IDeskManager.cpp  IDeskManager.h  IEventsKeyboard.cpp  IEventsKeyboard.h  IEventsMouse.cpp  IEventsMouse.h  IHusk.cpp  (+30 more)
WorkbenchGLUT/: CApplicationGaugeWorkbench.cpp  CApplicationGaugeWorkbench.h  GaugeApp.h  GaugeViewOpenGL.cpp  GaugeViewOpenGL.h  Makefile.am  Workbench.cpp  WorkbenchGLUT.project
WorkbenchShared/: CApplicationGaugeWorkbench.cpp  CApplicationGaugeWorkbench.h  CCommandProcessorWorkbench.cpp  CCommandProcessorWorkbench.h  CMakeLists.txt  CMouseProcessorWB.cpp  CMouseProcessorWB.h  Makefile.am  ReadMe.txt  WorkbenchShared-2005.vcproj  WorkbenchShared.project  WorkbenchShared.vcproj  WorkbenchShared.vcxproj  resource.h  stdafx.h
WorkbenchWin/: CApplicationGaugeWorkbench.cpp  CApplicationGaugeWorkbench.h  CApplicationGaugeWorkbenchWin.cpp  CApplicationGaugeWorkbenchWin.h  CMakeLists.txt  CWinCEApp.cpp  CWinCEApp.h  CWinCEDlg.cpp  CWinCEDlg.h  Makefile.am  VPostCalculate.h  WorkbenchWin.vcproj  WorkbenchWin.vcxproj  WorkbenchWinCE.rc  bezelbutton.h  localSettings.xml  main.cpp  resource.h  resource1.h  stdafx.cpp  winmain.cpp
(+1190 files in other folders)
