

ACLOCAL_AMFLAGS = -I m4 --install
SUBDIRS = . \
	Platform \
	Platform/Platform_specs \
	Common \
	Common/Common_specs \
	Gadget \
	Gadget/Gadget_specs \
	VSAShared
	Draw/VDraw \
	Draw/VDrawOpenGL \
	Draw/CDrawOpenGL \
	WorkbenchShared
#SUBDIRS = . Platform Platform/Platform_specs Common Common/Common_specs
##Gadget Logfile Platform VSAShared 
