

ACLOCAL_AMFLAGS = -I m4 --install
SUBDIRS = \
	Platform \
	Common \
	Draw/VDraw \
	Draw/CDrawTmxWin \
	Gadget \
	VSAShared \
	WorkbenchShared \
	Config \
	$(EXTSUBDIRS) \
	\
	Services/ServiceVehicleDataSample \
	Services/ServiceVehicleDirectLoad \
	\
	GenericContainer \
	\
	CmdPlugins/CmdCameraSelector \
	CmdPlugins/CmdConstant \
	CmdPlugins/CmdConstantD \
	CmdPlugins/CmdCopyToD \
	CmdPlugins/CmdKeyName \
	CmdPlugins/CmdReturnTrue \
	CmdPlugins/CmdTouchCalibrate \
	CmdPlugins/CmdVehicleDataLoader \
	CmdPlugins/CmdVehicleDataSample
