AM_CPPFLAGS = \
		-I$(top_srcdir)/Common \
		-I$(top_srcdir)/Platform \
		-I$(top_srcdir)/LogFile
AM_CXXFLAGS = \
		-fPIC -Wall -Werror


lib_LIBRARIES = libcommon.a

libcommon_a_SOURCES = \
		CConfiguration.cpp \
		CEventManager.cpp \
		CFactoryConfiguration.cpp \
		CFactoryPlugin.cpp \
		Chronos.cpp \
		CMatrix3x3.cpp \
		CMatrix3x3d.cpp \
		CPluginConfiguration.cpp \
		CPluginLibrary.cpp \
		CPluginLoader.cpp \
		CUnitsOfMeasure.cpp \
		CVariables.cpp \
		CVariantData.cpp \
		IExternalXML.cpp \
		IKeyboard.cpp \
		IPlugin.cpp \
		IPluginLibrary.cpp \
		IPluginLoadConfiguration.cpp \
		ISupports.cpp \
		ISupportsLocal.cpp \
		VFactory.cpp \
		VFactoryLite.cpp \
		VPlugin.cpp \
		VPluginWithAggregate.cpp \
		VPluginWithAggregateList.cpp \
		VSupports.cpp


